# NetSim-gr2-Sara-Konrad-Antonina-Lukasz

./: .gitignore  CMakeLists.txt  README.md
Src/: Package.cpp
include/: Package.hpp  Ramp.hpp  Worker.hpp  factory.hpp  helpers.hpp  nodes.hpp  reports.hpp  storage_types.hpp  types.hpp
src/: Package.cpp  Ramp.cpp  Worker.cpp  factory.cpp  helpers.cpp  nodes.cpp  reports.cpp  storage_types.cpp
test/: section_1_tests.cpp  section_2_tests.cpp  section_4_tests.cpp
test/IO test files/: save_factory_structure_1
